# sunboard

./: .env.example  .gitignore  README.md  setup.cfg
mysite/: settings.py  urls.py
sunboard/: apps.py  htmlutils.py  models.py  urls.py  views.py
sunboard/migrations/: 0001_initial.py
sunboard/static/sunboard/: sunboard.css  sunboard.js
