[metadata]
name = sunboard
version = 0.1
description = A tool for collaborative brainstorming
long_description = file: README.md
long_description_content_type = text/markdown
url = https://thomas-guettler.de/
author = Thomas Güttler
author_email = info.sunboard@thomas-guettler.de
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Hungry Human Beings
    License :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
include_package_data = true
packages = find:
install_requires =
    wheel
    Django >= 3.1.4
    python-dotenv
    psycopg2-binary
    pytest-django
    whitenoise
    gunicorn
    django-debug-toolbar
    html_form_to_dict
    django-middleware-global-request
    pytest-mock
    pre-commit

scripts =
    manage.py
